# forge-router

./: .env.example  .gitignore  Blog.md  MEMORY.md  README.md  check_providers.py  pyproject.toml  runbook_4_Windows.md
.agents/skills/forge-router/: SKILL.md
docs/: ENTERPRISE-GATEWAY-EVALUATION.md
forge/: chat.py  cli.py
forge/config/: settings.py
forge/memory/: embedder.py  knowledge_base.py
forge/providers/: antigravity.py  base.py  cerebras.py  claude.py  codex.py  copilot.py  gemini.py  groq.py  hermes.py  mistral.py  ollama.py  openai.py  openrouter.py  perplexity.py  sakana.py
forge/router/: engine.py  observability.py
forge/ui/: console.py  preview_server.py  preview_window.py
forge_core/: __init__.py
forge_core/config/: settings.py
forge_core/memory/: embedder.py  knowledge_base.py
forge_core/providers/: antigravity.py  base.py  cerebras.py  claude.py  codex.py  copilot.py  groq.py  hermes.py  mistral.py  ollama.py  openai.py  openai_image.py  openrouter.py
forge_core/router/: engine.py  observability.py
forge_gateway/: __init__.py  app.py  compress.py  store.py
memory/: forge_kb.db  forge_kb.faiss
tests/: test_cli.py  test_codex_provider.py  test_context_fit.py  test_forge_core.py  test_gateway.py  test_router.py  test_ux.py
